terraform_08_revision/roboshop-infra-dev/20-sg-rules/main.tf
resource "aws_security_group" "bastion_internet" {

      type = "ingress"
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_block = [local.my_ip]
    
      security_group_id = local.bastion_sg_id   
}


resource "aws_security_group" "mongodb_bastion" {

      type = "ingress"
      from_port = 22
      to_port = 22
      protocol = "tcp"
      source_security_group_id = local.bastion_sg_id
      security_group_id = local.mongodb_sg_id
}

resource "aws_security_group" "mongodb_catalogue" {

      type = "ingress"
      from_port = 27017
      to_port = 27017
      protocol = "tcp"
      source_security_group_id = local.catalogue_sg_id
      security_group_id = local.mongodb_sg_id
}

resource "aws_security_group" "mongodb_user" {

      type = "ingress"
      from_port = 27017
      to_port = 27017
      protocol = "tcp"
      source_security_group_id = local.user_sg_id
      security_group_id = local.mongodb_sg_id
}
